     *************************************************************

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization category
---------------------------------------

28th November 2014  Laurent Garnier (vis-V10-00-15)
- opengl-V10-00-28 :
  o Fix refresh problem due to a bad threading management
  o Fixes hidden marker field in Qt viewer properties.
  o Fixes a bug whereby hidden markers are not respected if 2D objects
    are drawn.
  o Fix a compilation issue with Wt driver
  o Fix some minor GUI visual issues
  o Allow viewer properties/picking/scene tree to be accessible
  from an external application
  o Fix JIRA DEV-173 about using external application 
- gMocren-V10-00-03
  o fixed warnings according to COVERITY
  o fixed STRING_OVERFLOW checks according to COVERITY
- modeling-V10-00-12
- visman-V10-00-30

28th November 2014  John Allison  (vis-V10-00-14-JA-01)
- modeling-V10-00-12: Tidied.
- visman-V10-00-30: Get correct run manager in MT mode.
- visman-V10-00-29: Fixed Coverity warning.

26th November 2014  John Allison  (vis-V10-00-14-JA-00)
- Private tag to assist merging wit MT vis-sub-thread version.

21st November 2014  John Allison
- visman-V10-00-28: Fix bug affecting file-writing viewers.

20th November 2014  John Allison
- visman-V10-00-27: Another go at fixing win7-vc12 compiler warnings.

19th November 2014  John Allison
- visman-V10-00-26: Fixed compiler warnings.

17th November 2014  John Allison
- visman-V10-00-25: Fixes for Coverity warnings.

11th November 2014  John Allison
- visman-V10-00-24: Improved /vis/scene/add/scale.

8th November 2014  John Allison  (vis-V10-00-14)
- visman-V10-00-23:
  o Fixed spelling mistake in messages.
  o Fixed win7-vc12 compiler warnings.

7th November 2014  Laurent Garnier (vis-V10-00-12 - vis-V10-00-13)