@@ -24,6 +24,16 @@ committal in the CVS repository !
 History file for visualization category
 ---------------------------------------
 
+7th February 2015  Akinori Kimura (vis-V10-00-16)
+- gMocren: fixed bugs of checking string lengths.
+
+2nd February 2015  Gabriele Cosmo
+- Fix to sources.cmake scripts in various modules to include missing
+  dependency on external USolids library.
+
+16th December 2014  John Allison
+- Corrected sources.cmake to include missing files.
+
 28th November 2014  Laurent Garnier (vis-V10-00-15)
 - opengl-V10-00-28 :
   o Fix refresh problem due to a bad threading management
